--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,11 @@
 {
   "name": "client",
   "private": true,
+  "proxy" : "http://localhost:8080",
   "version": "0.0.0",
   "type": "module",
+  
+
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -15,6 +18,7 @@
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
     "axios": "^1.7.3",
+    "eslint": "^9.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0"
